# manimate

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  EXPERIMENT-LOG.md  README.md  RESEARCH-BRIEF.md  pyproject.toml
.agents/: CLAUDE-template.md  EXPERIMENT-LOG-template.md
.agents/plans/: anime-segmentation-module.md  mog-interpolation-mvp.md  sketch-to-clean-keyframe.md
.agents/reference/: mcp-suggestions.md
.agents/reviews/: 2026-04-12T090437_mog-interpolation-mvp.json
.claude/: settings.json
.claude/commands/: adversarial-experiment-review.md  adversarial-review.md  analyze-results.md  commit.md  create-brief.md  create-rules.md  execute.md  handoff.md  init-project.md  lit-review.md  plan-task.md  prime.md  write-paper.md
configs/interpolation/: default.yaml
configs/lora/: default.yaml
configs/style_transfer/: default.yaml
manimate/: __init__.py
manimate/interpolation/: __init__.py  base.py  mog.py  pipeline.py
manimate/video/: __init__.py  io.py
scripts/: download_models.py  interpolate.py  setup_runpod.sh  test_layer_interpolation.py
